# email_guesser

./: README.md  docker-compose.yml
backend/: .env  .pylintrc  Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/domains/email/: email.py  email_repository.py  email_service.py
backend/app/ports/email/api/: email_deps.py  email_responses.py  email_router.py
backend/app/ports/email/db/postgres/: postgres_email_queries.py  postgres_email_repository.py
backend/scripts/: load_fixture.py
backend/tests/: test_api.py  test_scripts.py  utils.py
frontend/: .env  Dockerfile  jest.config.js  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.tsx
