[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tolga Bilbey <bilbeyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
pylint = "^3.2.5"
mypy = "^1.10.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
explicit_package_bases = true

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3
ignore_whitespace = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]